# Ribbon

./: Cargo.toml  README.md
crates/guiql/src/lang/: ast.rs  tokenizer.rs
crates/guiql/src/lang/parser/: module.rs  view.rs
crates/shigure-compiler/: Cargo.toml
crates/shigure-compiler/src/: lib.rs
crates/shigure-log/: Cargo.toml
crates/shigure-log/src/: lib.rs
crates/shigure-parser/: Cargo.toml
crates/shigure-parser/src/lang/: ast.rs  parser.rs  tokenizer.rs
crates/shigure-parser/src/lang/ast/: item.rs
crates/shigure-parser/src/lang/parser/: module.rs  view.rs
crates/shigure-test/: Cargo.toml
crates/shigure-test/src/: main.rs
examples/: helloworld.shi  helloworld2.shi  mutability.shi  struct.shi  use_import.shi
examples/helloworld/: .shigure-test
tests/array/: main.shi  output
tests/effect/: .shigure-test  main.shi  output
tests/helloworld/: ast
tests/result/: main.shi
tests/struct/: main.shi
